finish server.js file, update swagger file
